--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -86,7 +86,7 @@ jobs:
         run: |
           Write-Output "UE_${{ matrix.version }}"
           $UERunUAT = "C:\\Program Files\\Epic Games\\UE_${{ matrix.version }}\\Engine\\Build\\BatchFiles\\RunUAT.bat"
-          & $UERunUAT BuildPlugin -Rocket -Plugin="$(pwd)\MillicastPlayer.uplugin" -TargetPlatforms=Win64 -Package="$(pwd)\\Build\\DolbyIO" -StrictIncludes -VS2019 -NoTurnKeyVariables
+          & $UERunUAT BuildPlugin -Rocket -Plugin="$(pwd)\MillicastPlayer.uplugin" -TargetPlatforms=Win64 -Package="$(pwd)\\Build\\Millicast" -StrictIncludes -VS2019 -NoTurnKeyVariables
       - name: Sign DolbyIO Unreal Plugin
         env:
           WINDOWS_CERTIFICATE_PASSWORD: ${{ secrets.WINDOWS_CERTIFICATE_PASSWORD }}
