DIOS-1726 checking branch existing in example repo

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -13,9 +13,11 @@ jobs:
       - name: Check if branch exists
         id: branch-check
         run: |
+          echo "${{ github.ref }}"
           exists=$(curl -s -o /dev/null -w "%{http_code}" -X GET \
             "https://api.github.com/repos/millicast/millicast-player-unreal-engine-plugin/git/refs/heads/${{ github.ref }}" \
           )
+          echo "$exists"
           echo "::set-output name=branchExists::$(if [ $exists -eq 200 ]; then echo true; else echo false; fi)"
 
       # - name: Trigger Workflow
