--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -4,9 +4,7 @@ on:
   push:
     branches:
       - '*'
-          # exists=$(curl -s -o /dev/null -w "%{http_code}" -X GET \
-          #   "https://api.github.com/repos/millicast/millicast-player-unreal-engine-plugin/git/${{ github.ref }}" \
-          # )
+
 jobs:
   check-branch:
     runs-on: ubuntu-latest
@@ -33,6 +31,7 @@ jobs:
 
       - name: Trigger Workflow on Dev Branch
         if: steps.branch-check.outputs.branch_exists == 'false'
+        uses: peter-evans/repository-dispatch@v1
         with:
           # token: ${{ secrets.TOKEN }}
           repository: millicast/millicast-player-ue5-example
