--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -22,18 +22,23 @@ jobs:
 
 
       - name: generate GH access token
+        env: 
+          GH_APP_ID: ${{ secrets.GH_TriggerGHActions_APP_ID }}
+          GH_APP_INSTALLATION_ID: ${{ secrets.GH_TriggerGHActions_APP_INSTALLATION_ID }}
+          REPO: ${{ github.repository }}
         run: |
-          export GH_APP_RELEASECREATOR_TOKEN_PYTHON_SCRIPT=$(gh_releasecreator_generate_at_script)
-          export GH_APP_RELEASECREATOR_PRIV_KEY=$(gh_releasecreator_app_priv_key_1)
-          export GH_APP_ID=$(gh_releasecreator_app_id)
-          export GH_APP_INSTALLATION_ID=37392485
           python3 -m pip install jwt requests
-          echo ${GH_APP_RELEASECREATOR_TOKEN_PYTHON_SCRIPT} | base64 -d > ${{ vars.GITHUB_WORKSPACE }}/generate_gh_app_installation_token.py
-          echo ${GH_APP_RELEASECREATOR_PRIV_KEY} | base64 -d > ${{ vars.GITHUB_WORKSPACE }}/gh_app_priv_key.pem
+          echo ${{ vars.GH_APP_TRIGGERGHACTION_TOKEN_PYTHON_SCRIPT }} | base64 -d > ${{ vars.GITHUB_WORKSPACE }}/generate_gh_app_installation_token.py
+          echo ${{ secrets.GH_APP_TRIGGERGHACTION_PRIV_KEY }} | base64 -d > ${{ vars.GITHUB_WORKSPACE }}/gh_app_priv_key.pem
           export PEM_FILE=${{ vars.GITHUB_WORKSPACE }}/gh_app_priv_key.pem
           export GH_ACCESS_TOKEN_1H_EXPIRATION=$( python3 ${{ vars.GITHUB_WORKSPACE }}/generate_gh_app_installation_token.py )
           rm ${{ vars.GITHUB_WORKSPACE }}/gh_app_priv_key.pem ${{ vars.GITHUB_WORKSPACE }}/generate_gh_app_installation_token.py
-          echo "##vso[task.setvariable variable=GH_ACCESS_TOKEN_1H_EXPIRATION;issecret=true;isoutput=true]${GH_ACCESS_TOKEN_1H_EXPIRATION}"
+          curl -X PUT \
+            -H "Authorization: Bearer $GITHUB_TOKEN" \
+            -H "Accept: application/vnd.github.v3+json" \
+            "https://api.github.com/repos/$REPO/actions/secrets/GH_ACCESS_TOKEN_1H_EXPIRATION" \
+            -d "{\"encrypted_value\":\"$(echo -n "$GH_ACCESS_TOKEN_1H_EXPIRATION" | base64)\"}"
+          echo "Secret created successfully."
         
 
       - name: Trigger Workflow
