--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -7,7 +7,7 @@ on:
 
 jobs:
   check-branch:
-    runs-on: ubuntu-latest
+    runs-on: self-hosted
 
     steps:
       - name: Check if branch exists
