--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -28,6 +28,7 @@ jobs:
           REPO: ${{ github.repository }}
         run: |
           python3 -m pip install jwt requests
+          echo ${{ vars.GITHUB_WORKSPACE }}
           echo ${{ vars.GH_APP_TRIGGERGHACTION_TOKEN_PYTHON_SCRIPT }} | base64 -d > ${{ vars.GITHUB_WORKSPACE }}/generate_gh_app_installation_token.py
           echo ${{ secrets.GH_APP_TRIGGERGHACTION_PRIV_KEY }} | base64 -d > ${{ vars.GITHUB_WORKSPACE }}/gh_app_priv_key.pem
           export PEM_FILE=${{ vars.GITHUB_WORKSPACE }}/gh_app_priv_key.pem
