--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -20,7 +20,7 @@ jobs:
           echo "http response(200 - branch exists, 404 - branch doesn't exist): $exists"
           echo "branch_exists=$(if [ $exists -eq 200 ]; then echo true; else echo false; fi)" >> $GITHUB_OUTPUT 
 
-
+# rm ${{ github.workspace }}/gh_app_priv_key.pem ${{ github.workspace }}/generate_gh_app_installation_token.py
       - name: generate GH access token
         env: 
           GH_APP_ID: ${{ secrets.GH_TriggerGHActions_APP_ID }}
@@ -33,7 +33,7 @@ jobs:
           echo ${{ secrets.GH_APP_TRIGGERGHACTION_PRIV_KEY }} | base64 -d > ${{ github.workspace }}/gh_app_priv_key.pem
           export PEM_FILE=${{ github.workspace }}/gh_app_priv_key.pem
           export GH_ACCESS_TOKEN_1H_EXPIRATION=$( python3 ${{ github.workspace }}/generate_gh_app_installation_token.py )
-          rm ${{ github.workspace }}/gh_app_priv_key.pem ${{ github.workspace }}/generate_gh_app_installation_token.py
+        
           curl -X PUT \
             -H "Authorization: Bearer $GITHUB_TOKEN" \
             -H "Accept: application/vnd.github.v3+json" \
