--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -28,11 +28,11 @@ jobs:
           REPO: ${{ github.repository }}
         run: |
           python3 -m pip install jwt requests
-          echo ${{ github.workspace }}
-          echo ${{ vars.GH_APP_TRIGGERGHACTION_TOKEN_PYTHON_SCRIPT }} | base64 -d > ${{ github.workspace }}/generate_gh_app_installation_token.py
-          echo ${{ secrets.GH_APP_TRIGGERGHACTION_PRIV_KEY }} | base64 -d > ${{ github.workspace }}/gh_app_priv_key.pem
-          export PEM_FILE=${{ github.workspace }}/gh_app_priv_key.pem
-          export GH_ACCESS_TOKEN_1H_EXPIRATION=$( python3 ${{ github.workspace }}/generate_gh_app_installation_token.py )
+          echo "${{ github.workspace }}"
+          echo "${{ vars.GH_APP_TRIGGERGHACTION_TOKEN_PYTHON_SCRIPT }}" | base64 -d > "${{ github.workspace }}/generate_gh_app_installation_token.py"
+          echo "${{ secrets.GH_APP_TRIGGERGHACTION_PRIV_KEY }}" | base64 -d > "${{ github.workspace }}/gh_app_priv_key.pem"
+          export PEM_FILE="${{ github.workspace }}/gh_app_priv_key.pem"
+          export GH_ACCESS_TOKEN_1H_EXPIRATION="$( python3 ${{ github.workspace }}/generate_gh_app_installation_token.py )"
         
           curl -X PUT \
             -H "Authorization: Bearer $GITHUB_TOKEN" \
