--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -30,7 +30,7 @@ jobs:
           python3 -m pip install jwt requests
           echo "${{ github.workspace }}"
           echo "${{ vars.GH_APP_TRIGGERGHACTION_TOKEN_PYTHON_SCRIPT }}" | base64 -d > "${{ github.workspace }}/generate_gh_app_installation_token.py"
-          echo "${{ secrets.GH_APP_TRIGGERGHACTION_PRIV_KEY }}" | base64 -d > "${{ github.workspace }}/gh_app_priv_key.pem"
+          # echo "${{ secrets.GH_APP_TRIGGERGHACTION_PRIV_KEY }}" | base64 -d > "${{ github.workspace }}/gh_app_priv_key.pem"
           echo "${{ secrets.GH_APP_TRIGGERGHACTION_PRIV_KEY }}" > "${{ github.workspace }}/gh_app_priv_key_plain.pem"
           # export PEM_FILE="${{ github.workspace }}/gh_app_priv_key.pem"
           # export GH_ACCESS_TOKEN_1H_EXPIRATION="$( python3 ${{ github.workspace }}/generate_gh_app_installation_token.py )"
