--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -21,6 +21,15 @@ jobs:
           echo "branch_exists=$(if [ $exists -eq 200 ]; then echo true; else echo false; fi)" >> $GITHUB_OUTPUT 
 
 # rm ${{ github.workspace }}/gh_app_priv_key.pem ${{ github.workspace }}/generate_gh_app_installation_token.py
+# export PEM_FILE="${{ github.workspace }}/gh_app_priv_key.pem"
+# export GH_ACCESS_TOKEN_1H_EXPIRATION="$( python3 ${{ github.workspace }}/generate_gh_app_installation_token.py )"
+# echo "${{ secrets.GH_APP_TRIGGERGHACTION_PRIV_KEY }}" | base64 -d > "${{ github.workspace }}/gh_app_priv_key.pem"
+# curl -X PUT \
+#             -H "Authorization: Bearer $GITHUB_TOKEN" \
+#             -H "Accept: application/vnd.github.v3+json" \
+#             "https://api.github.com/repos/$REPO/actions/secrets/GH_ACCESS_TOKEN_1H_EXPIRATION" \
+#             -d "{\"encrypted_value\":\"$(echo -n "$GH_ACCESS_TOKEN_1H_EXPIRATION" | base64)\"}"
+#           echo "Secret created successfully."
       - name: generate GH access token
         env: 
           GH_APP_ID: ${{ secrets.GH_TriggerGHActions_APP_ID }}
@@ -30,17 +39,8 @@ jobs:
           python3 -m pip install jwt requests
           echo "${{ github.workspace }}"
           echo "${{ vars.GH_APP_TRIGGERGHACTION_TOKEN_PYTHON_SCRIPT }}" | base64 -d > "${{ github.workspace }}/generate_gh_app_installation_token.py"
-        # echo "${{ secrets.GH_APP_TRIGGERGHACTION_PRIV_KEY }}" | base64 -d > "${{ github.workspace }}/gh_app_priv_key.pem"
           echo "${{ secrets.GH_APP_TRIGGERGHACTION_PRIV_KEY }}" > "${{ github.workspace }}/gh_app_priv_key_plain.pem"
-        # export PEM_FILE="${{ github.workspace }}/gh_app_priv_key.pem"
-        # export GH_ACCESS_TOKEN_1H_EXPIRATION="$( python3 ${{ github.workspace }}/generate_gh_app_installation_token.py )"
-        
-          curl -X PUT \
-            -H "Authorization: Bearer $GITHUB_TOKEN" \
-            -H "Accept: application/vnd.github.v3+json" \
-            "https://api.github.com/repos/$REPO/actions/secrets/GH_ACCESS_TOKEN_1H_EXPIRATION" \
-            -d "{\"encrypted_value\":\"$(echo -n "$GH_ACCESS_TOKEN_1H_EXPIRATION" | base64)\"}"
-          echo "Secret created successfully."
+          
         
 
       - name: Trigger Workflow
