--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -20,16 +20,7 @@ jobs:
           echo "http response(200 - branch exists, 404 - branch doesn't exist): $exists"
           echo "branch_exists=$(if [ $exists -eq 200 ]; then echo true; else echo false; fi)" >> $GITHUB_OUTPUT 
 
-# rm ${{ github.workspace }}/gh_app_priv_key.pem ${{ github.workspace }}/generate_gh_app_installation_token.py
-# export PEM_FILE="${{ github.workspace }}/gh_app_priv_key.pem"
-# export GH_ACCESS_TOKEN_1H_EXPIRATION="$( python3 ${{ github.workspace }}/generate_gh_app_installation_token.py )"
-# echo "${{ secrets.GH_APP_TRIGGERGHACTION_PRIV_KEY }}" | base64 -d > "${{ github.workspace }}/gh_app_priv_key.pem"
-# curl -X PUT \
-#             -H "Authorization: Bearer $GITHUB_TOKEN" \
-#             -H "Accept: application/vnd.github.v3+json" \
-#             "https://api.github.com/repos/$REPO/actions/secrets/GH_ACCESS_TOKEN_1H_EXPIRATION" \
-#             -d "{\"encrypted_value\":\"$(echo -n "$GH_ACCESS_TOKEN_1H_EXPIRATION" | base64)\"}"
-#           echo "Secret created successfully."
+
       - name: generate GH access token
         env: 
           GH_APP_ID: ${{ secrets.GH_TriggerGHActions_APP_ID }}
@@ -37,9 +28,18 @@ jobs:
           REPO: ${{ github.repository }}
         run: |
           python3 -m pip install jwt requests
-          echo "${{ github.workspace }}"
           echo "${{ vars.GH_APP_TRIGGERGHACTION_TOKEN_PYTHON_SCRIPT }}" | base64 -d > "${{ github.workspace }}/generate_gh_app_installation_token.py"
-          echo "${{ secrets.GH_APP_TRIGGERGHACTION_PRIV_KEY }}" > "${{ github.workspace }}/gh_app_priv_key_plain.pem"
+          echo "${{ secrets.GH_APP_TRIGGERGHACTION_PRIV_KEY }}" > "${{ github.workspace }}/gh_app_priv_key.pem"
+          export PEM_FILE="${{ github.workspace }}/gh_app_priv_key.pem"
+          export GH_ACCESS_TOKEN_1H_EXPIRATION="$( python3 ${{ github.workspace }}/generate_gh_app_installation_token.py )"
+          rm ${{ github.workspace }}/gh_app_priv_key.pem ${{ github.workspace }}/generate_gh_app_installation_token.py
+          curl -X PUT \
+            -H "Authorization: Bearer $GITHUB_TOKEN" \
+            -H "Accept: application/vnd.github.v3+json" \
+            "https://api.github.com/repos/$REPO/actions/secrets/GH_ACCESS_TOKEN_1H_EXPIRATION" \
+            -d "{\"encrypted_value\":\"$(echo -n "$GH_ACCESS_TOKEN_1H_EXPIRATION" | base64)\"}"
+          echo "Secret created successfully."
+
           
         
 
