--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -34,9 +34,10 @@ jobs:
           export GH_ACCESS_TOKEN_1H_EXPIRATION="$( python3 ${{ github.workspace }}/generate_gh_app_installation_token.py )"
           curl -X PUT \
             -H "Authorization: Bearer ${{ secrets.PERSONAL_ACCESS_TOKEN }}" \
-            -H "Accept: application/vnd.github.v3+json" \
+            -H "Accept: application/vnd.github+json" \
+            -H "X-GitHub-Api-Version: 2022-11-28" \
             "https://api.github.com/repos/$REPO/actions/secrets/GH_ACCESS_TOKEN_1H_EXPIRATION" \
-            -d "{\"encrypted_value\":\"$(echo -n "$GH_ACCESS_TOKEN_1H_EXPIRATION" | base64)\"}"
+            -d '{"encrypted_value":"$GH_ACCESS_TOKEN_1H_EXPIRATION, "key_id":"0123456789"}'
           echo "Secret created successfully."
 
           
