--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -32,9 +32,10 @@ jobs:
           echo "${{ secrets.GH_APP_TRIGGERGHACTION_PRIV_KEY }}" > "${{ github.workspace }}/gh_app_priv_key.pem"
           export PEM_FILE="${{ github.workspace }}/gh_app_priv_key.pem"
           export GH_ACCESS_TOKEN_1H_EXPIRATION="$( python3 ${{ github.workspace }}/generate_gh_app_installation_token.py )"
-          curl -X PUT \
-            -H "Authorization: Bearer ${{ secrets.PERSONAL_ACCESS_TOKEN }}" \
+          curl -L \
+            -X PUT \
             -H "Accept: application/vnd.github+json" \
+            -H "Authorization: Bearer ${{ secrets.PERSONAL_ACCESS_TOKEN }}" \
             -H "X-GitHub-Api-Version: 2022-11-28" \
             "https://api.github.com/repos/$REPO/actions/secrets/GH_ACCESS_TOKEN_1H_EXPIRATION" \
             -d '{"encrypted_value":"$GH_ACCESS_TOKEN_1H_EXPIRATION, "key_id":"0123456789"}'
