--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -29,6 +29,7 @@ jobs:
           #   "https://api.github.com/repos/$REPO/actions/secrets/GH_ACCESS_TOKEN_1H_EXPIRATION" \
           #   -d '{"encrypted_value":"$GH_ACCESS_TOKEN_1H_EXPIRATION,"key_id":"012345678912345678"}'
           # echo "Secret created successfully."
+
       - name: generate GH access token
         env: 
           GH_APP_ID: ${{ secrets.GH_TriggerGHActions_APP_ID }}
@@ -37,17 +38,12 @@ jobs:
         run: |
           python3 -m pip install jwt requests
           echo "${{ vars.GH_APP_TRIGGERGHACTION_TOKEN_PYTHON_SCRIPT }}" | base64 -d > "${{ github.workspace }}/generate_gh_app_installation_token.py"
+          echo "${{ vars.GH_APP_TRIGGERGHACTION_TOKEN_ENCRYPTION_PYTHON_SCRIPT }}" | base64 -d > "${{ github.workspace }}/encrypt_token.py"
           echo "${{ secrets.GH_APP_TRIGGERGHACTION_PRIV_KEY }}" > "${{ github.workspace }}/gh_app_priv_key.pem"
           export PEM_FILE="${{ github.workspace }}/gh_app_priv_key.pem"
           export GH_ACCESS_TOKEN_1H_EXPIRATION="$( python3 ${{ github.workspace }}/generate_gh_app_installation_token.py )"
+          echo $GH_ACCESS_TOKEN_1H_EXPIRATION > "${{ github.workspace }}/gh_1h_access_token.py"
 
-          curl -L \
-            -H "Accept: application/vnd.github+json" \
-            -H "Authorization: Bearer ${{ secrets.PERSONAL_ACCESS_TOKEN }}"\
-            -H "X-GitHub-Api-Version: 2022-11-28" \
-            "https://api.github.com/repos/$REPO/actions/secrets/public-key"
-
-          
 
           
     
