--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -51,12 +51,13 @@ jobs:
         if: steps.branch-check.outputs.branch_exists == 'true'
         run: |
           echo "trigger Workflow"
-          curl \
+          curl -L \                             ✔
             -X POST \
-            -H "Authorization: Bearer $GH_ACCESS_TOKEN_1H_EXPIRATION" \
-            -H "Accept: application/vnd.github.v3+json" \
+            -H "Accept: application/vnd.github+json" \
+            -H "Authorization: Bearer $GH_ACCESS_TOKEN_1H_EXPIRATION"\
+            -H "X-GitHub-Api-Version: 2022-11-28" \
             https://api.github.com/repos/millicast/millicast-player-ue5-example/actions/workflows/build.yml/dispatches \
-            -d '{"ref": "${{ github.ref }}"}'
+            -d '{"ref":"${{ github.ref }}"}'
 
 
       - name: Trigger Workflow on Dev Branch
