--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -51,7 +51,7 @@ jobs:
         if: steps.branch-check.outputs.branch_exists == 'true'
         run: |
           echo "trigger Workflow"
-          curl -L \                             ✔
+          curl -L \        
             -X POST \
             -H "Accept: application/vnd.github+json" \
             -H "Authorization: Bearer $GH_ACCESS_TOKEN_1H_EXPIRATION"\
