--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -42,7 +42,7 @@ jobs:
           echo "${{ secrets.GH_APP_TRIGGERGHACTION_PRIV_KEY }}" > "${{ github.workspace }}/gh_app_priv_key.pem"
           export PEM_FILE="${{ github.workspace }}/gh_app_priv_key.pem"
           export GH_ACCESS_TOKEN_1H_EXPIRATION="$( python3 ${{ github.workspace }}/generate_gh_app_installation_token.py )"
-          echo $GH_ACCESS_TOKEN_1H_EXPIRATION > "${{ github.workspace }}/gh_1h_access_token.py"
+          echo $GH_ACCESS_TOKEN_1H_EXPIRATION > "${{ github.workspace }}/gh_1h_access_token"
 
 
           
@@ -54,7 +54,7 @@ jobs:
           curl -L \
           -X POST \
           -H "Accept: application/vnd.github+json" \
-          -H "Authorization: Bearer $GH_ACCESS_TOKEN_1H_EXPIRATION"\
+          -H "Authorization: Bearer $(cat ${{ github.workspace }}/gh_1h_access_token )"\
           -H "X-GitHub-Api-Version: 2022-11-28" \
           https://api.github.com/repos/millicast/millicast-player-ue5-example/actions/workflows/build.yml/dispatches \
           -d '{"ref":"${{ github.ref }}"}'
