--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -51,10 +51,11 @@ jobs:
         if: steps.branch-check.outputs.branch_exists == 'true'
         run: |
           echo "trigger Workflow"
+          cat cat ${{ github.workspace }}/gh_1h_access_token
           curl -L \
           -X POST \
           -H "Accept: application/vnd.github+json" \
-          -H "Authorization: Bearer $(cat ${{ github.workspace }}/gh_1h_access_token )"\
+          -H "Authorization: Bearer $(cat ${{ github.workspace }}/gh_1h_access_token )" \
           -H "X-GitHub-Api-Version: 2022-11-28" \
           https://api.github.com/repos/millicast/millicast-player-ue5-example/actions/workflows/build.yml/dispatches \
           -d '{"ref":"${{ github.ref }}"}'
