--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -51,7 +51,7 @@ jobs:
         if: steps.branch-check.outputs.branch_exists == 'true'
         run: |
           echo "trigger Workflow"
-          cat cat ${{ github.workspace }}/gh_1h_access_token
+          cat ${{ github.workspace }}/gh_1h_access_token
           curl -L \
           -X POST \
           -H "Accept: application/vnd.github+json" \
